# allFindFlight

./: .env.example  .gitignore  README.md
.github/workflows/: build-images.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/adapters/: __init__.py  base.py  google_flights.py  ryanair.py
backend/app/aggregator/: engine.py
backend/app/api/: search.py
backend/app/core/: db.py  logging.py  settings.py
backend/app/geo/: airports.py
backend/app/models/: __init__.py  airport.py  offer.py
backend/app/scripts/: seed_airports.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
infra/: .env.prod.example  DEPLOY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  setup-vps.sh
