[project]
name = "allfind-backend"
version = "0.1.0"
description = "AllfindFlight backend - intelligent flight search"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # DB
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    # Cache / queue
    "redis>=5.2",
    "celery[redis]>=5.4",
    # HTTP / scraping
    "httpx>=0.28",
    "curl-cffi>=0.7",
    "fast-flights>=2.2",
    # Geo
    "h3>=4.1",
    "geopy>=2.4",
    # Utils
    "python-dateutil>=2.9",
    "tenacity>=9.0",
    "structlog>=24.4",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "ipython>=8.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
